--- a/AUTHORS
+++ b/AUTHORS
@@ -5,3 +5,4 @@ Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
 Joann Vuong <130@holbertonschool.com> 
 Cyrus Houngue <cyrushoungue1240@gmail.com>
+Josias Hod <djossoujosiashod@gmail.com>
